grid_search_products_3e-3.txt
g000.anvil.rcac.purdue.edu
Mon Jan 30 20:27:39 2023       
+-----------------------------------------------------------------------------+
| NVIDIA-SMI 470.57.02    Driver Version: 470.57.02    CUDA Version: 11.4     |
|-------------------------------+----------------------+----------------------+
| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |
| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |
|                               |                      |               MIG M. |
|===============================+======================+======================|
|   0  NVIDIA A100-SXM...  On   | 00000000:81:00.0 Off |                    0 |
| N/A   28C    P0    49W / 400W |      0MiB / 40536MiB |      0%      Default |
|                               |                      |             Disabled |
+-------------------------------+----------------------+----------------------+
                                                                               
+-----------------------------------------------------------------------------+
| Processes:                                                                  |
|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |
|        ID   ID                                                   Usage      |
|=============================================================================|
|  No running processes found                                                 |
+-----------------------------------------------------------------------------+

Currently Loaded Modules:
  1) modtree/gpu            5) mpfr/4.0.2    9) numactl/2.0.14
  2) nccl/cuda-11.2_2.8.4   6) mpc/1.1.0    10) cuda/11.4.2
  3) cudnn/cuda-11.2_8.1    7) gcc/11.2.0   11) openmpi/4.0.6
  4) gmp/6.2.1              8) zlib/1.2.11  12) boost/1.74.0

 

[  4%] Built target context
[ 15%] Built target parallel
[ 19%] Built target core
[ 40%] Built target cudahelp
[ 54%] Built target test_mpi_gpu_hybrid
[ 54%] Built target test_nccl_thread
[ 54%] Built target test_cuda_graph
[ 65%] Built target test_graph
[ 76%] Built target test_mpi_gpu_model_parallel
[ 76%] Built target test_hello_world
[ 76%] Built target test_cuda_model_parallel
[ 76%] Built target test_mpi_gpu_pipelined_model_parallel
[ 76%] Built target test_cuda_pipeline_parallel
[ 88%] Built target test_nccl_mpi
[ 80%] Built target test_full_structual_graph
[ 78%] Built target test_trivial
[ 76%] Built target test_mpi_model_parallel
[ 82%] Built target test_single_node_training
[ 88%] Built target test_mpi_structual_graph
[ 89%] Built target test_mpi_non_structual_graph
[ 88%] Built target test_full_non_structual_graph
[ 88%] Built target test_mpi_combined
[ 88%] Built target test_cuda
[ 88%] Built target test_mpi_pipelined_model_parallel
[ 89%] Built target test_mpi_loader
[ 88%] Built target test_single_node_gpu_training
[ 89%] Built target estimate_comm_volume
[ 88%] Built target test_single_node_fullgpu_training
[ 95%] Built target OSDI2023_MULTI_NODES_gcn
[100%] Built target test_two_layer_hybrid_parallelism_designer
[100%] Built target OSDI2023_SINGLE_NODE_gcn
[100%] Built target OSDI2023_SINGLE_NODE_gcn_inference
[100%] Built target OSDI2023_MULTI_NODES_gcn_graph_parallel
Mon Jan 30 20:27:39 EST 2023
Running grid search on ogbn-products
  File "/home/x-jchen5/baseline/Mithril_MultiGPU/./icml2023/grid_search/run.py", line 17
    0.3, 0.4, 0.5, 0.6 0.7
                       ^
SyntaxError: invalid syntax
Mon Jan 30 20:27:39 EST 2023
